// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactFlightAsyncDebugInfoNode can track async information when awaited 1`] = `
[
  {
    "time": 0,
  },
  {
    "env": "Server",
    "key": null,
    "name": "Component",
    "owner": null,
    "props": {},
    "stack": [
      [
        "Object.<anonymous>",
        "/packages/react-server/src/__tests__/ReactFlightAsyncDebugInfo-test.js",
        144,
        109,
        131,
        135,
      ],
    ],
  },
  {
    "awaited": {
      "end": 0,
      "stack": [
        [
          "delay",
          "/packages/react-server/src/__tests__/ReactFlightAsyncDebugInfo-test.js",
          125,
          12,
          124,
          3,
        ],
        [
          "getData",
          "/packages/react-server/src/__tests__/ReactFlightAsyncDebugInfo-test.js",
          133,
          13,
          132,
          5,
        ],
        [
          "Component",
          "/packages/react-server/src/__tests__/ReactFlightAsyncDebugInfo-test.js",
          140,
          26,
          139,
          5,
        ],
      ],
      "start": 0,
    },
    "stack": [
      [
        "getData",
        "/packages/react-server/src/__tests__/ReactFlightAsyncDebugInfo-test.js",
        133,
        13,
        132,
        5,
      ],
      [
        "Component",
        "/packages/react-server/src/__tests__/ReactFlightAsyncDebugInfo-test.js",
        140,
        26,
        139,
        5,
      ],
    ],
  },
  {
    "awaited": {
      "end": 0,
      "stack": [
        [
          "delay",
          "/packages/react-server/src/__tests__/ReactFlightAsyncDebugInfo-test.js",
          125,
          12,
          124,
          3,
        ],
        [
          "getData",
          "/packages/react-server/src/__tests__/ReactFlightAsyncDebugInfo-test.js",
          134,
          21,
          132,
          5,
        ],
        [
          "Component",
          "/packages/react-server/src/__tests__/ReactFlightAsyncDebugInfo-test.js",
          140,
          20,
          139,
          5,
        ],
      ],
      "start": 0,
    },
    "stack": [
      [
        "getData",
        "/packages/react-server/src/__tests__/ReactFlightAsyncDebugInfo-test.js",
        135,
        21,
        132,
        5,
      ],
      [
        "Component",
        "/packages/react-server/src/__tests__/ReactFlightAsyncDebugInfo-test.js",
        140,
        20,
        139,
        5,
      ],
    ],
  },
  {
    "time": 0,
  },
]
`;

exports[`ReactFlightAsyncDebugInfoNode can track the start of I/O when no native promise is used 1`] = `
[
  {
    "time": 0,
  },
  {
    "env": "Server",
    "key": null,
    "name": "Component",
    "owner": null,
    "props": {},
    "stack": [
      [
        "Object.<anonymous>",
        "/packages/react-server/src/__tests__/ReactFlightAsyncDebugInfo-test.js",
        174,
        109,
        161,
        152,
      ],
    ],
  },
  {
    "awaited": {
      "end": 0,
      "stack": [
        [
          "Component",
          "/packages/react-server/src/__tests__/ReactFlightAsyncDebugInfo-test.js",
          164,
          7,
          162,
          5,
        ],
      ],
      "start": 0,
    },
  },
  {
    "time": 0,
  },
]
`;
